--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/db": "^0.14.3",
+    "@astrojs/node": "^8.3.4",
     "@astrojs/vue": "^4.5.2",
     "astro": "^4.16.13",
     "typescript": "^5.6.3",
