--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/node": "^8.3.4",
     "@astrojs/vue": "^4.5.2",
     "astro": "^4.16.13",
+    "tone": "^15.0.4",
     "typescript": "^5.6.3",
     "vue": "^3.5.13"
   }
