--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/db": "^0.14.3",
-    "@astrojs/node": "^8.3.4",
     "@astrojs/vue": "^4.5.2",
     "astro": "^4.16.13",
     "tone": "^15.0.4",
     "typescript": "^5.6.3",
+    "typewriter-effect": "^2.21.0",
     "vue": "^3.5.13"
   }
 }
