--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
@@ -13,6 +13,8 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/vue": "^4.5.2",
     "astro": "^4.16.13",
+    "rehype-wrap": "^1.1.0",
+    "rehype-wrap-all": "^1.1.0",
     "tone": "^15.0.4",
     "typescript": "^5.6.3",
     "typewriter-effect": "^2.21.0",
